<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="5"
    android:columnCount="3"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:text="@string/label_begin_date"
        android:id="@+id/tvBeginDate"
        android:padding="10dp"
        android:layout_row="0"
        android:layout_column="0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_row="1"
        android:layout_column="0">

    <Spinner
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinMonth"
        android:spinnerMode="dropdown"
        android:padding="10dp"
        android:entries="@array/month_array" />

    <Spinner
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinDay"
        android:spinnerMode="dropdown"
        android:padding="10dp"
        android:entries="@array/day_array"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinYear"
        android:spinnerMode="dropdown"
        android:padding="10dp"
        android:entries="@array/year_array"/>
    </LinearLayout>

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/button_pick_date"
        android:id="@+id/btnDatePicker"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sort_order"
        android:id="@+id/tvSortOrder"
        android:layout_row="2"
        android:paddingLeft="10dp"
        android:layout_column="0" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spSort"
        android:entries="@array/sort_array"
        android:padding="10dp"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_news_desk_value"
        android:id="@+id/tvNewsDeskValue"
        android:layout_row="3"
        android:paddingLeft="10dp"
        android:layout_column="0" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_value_arts"
            android:id="@+id/cbArts"
            android:padding="10dp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_fashion"
            android:id="@+id/cbFashionAndStyle"
            android:checked="false"
            android:padding="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_value_sports"
            android:id="@+id/cbSports"
            android:checked="false"
            android:padding="10dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_column="1"
        android:text="@string/button_filter"
        android:id="@+id/btnFilter"
        android:layout_row="4" />


</GridLayout>